--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\Hanshik\eclipse-workspace\POM-MAVEN_GIT_Jenkins_Project\testng.xml</span>
+                    <span>C:\Users\tm\eclipse-workspace\PageObjectModel\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,11 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.TestCases.Tc_02_RegisterNewUser" hash-for-method="Tc_01_ValidateLoginCredentials">Tc_01_ValidateLoginCredentials</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.TestCases.Tc_01_ValidateLoginCredentials" hash-for-method="Tc_01_ValidateLoginCredentials">Tc_01_ValidateLoginCredentials</a> <!-- method navigator-link -->
@@ -132,10 +137,25 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.TestCases.Tc_02_RegisterNewUser</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="Tc_01_ValidateLoginCredentials">
+                  </a> <!-- Tc_01_ValidateLoginCredentials -->
+                  <span class="method-name">Tc_01_ValidateLoginCredentials</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Hanshik\eclipse-workspace\POM-MAVEN_GIT_Jenkins_Project\testng.xml</span>
+            <span class="header-content">C:\Users\tm\eclipse-workspace\PageObjectModel\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,6 +168,7 @@
   &lt;test name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.TestCases.Tc_01_ValidateLoginCredentials&quot;/&gt;
+      &lt;class name=&quot;com.TestCases.Tc_02_RegisterNewUser&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -161,7 +182,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,16 +208,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Tc_01_ValidateLoginCredentials')
-data.setCell(0, 2, 'com.TestCases.Tc_01_ValidateLoginCredentials')
-data.setCell(0, 3, 27698);
+data.setCell(0, 2, 'com.TestCases.Tc_02_RegisterNewUser')
+data.setCell(0, 3, 17176);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Tc_01_ValidateLoginCredentials')
+data.setCell(1, 2, 'com.TestCases.Tc_01_ValidateLoginCredentials')
+data.setCell(1, 3, 16850);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 seconds</span>
+              <span class="suite-total-time">Total running time: 34 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -226,6 +251,13 @@ return data;
               <div class="test-method">
                 <span class="method-name">Tc_01_ValidateLoginCredentials</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.TestCases.Tc_02_RegisterNewUser</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">Tc_01_ValidateLoginCredentials</span>
+                <span class="method-start">17401 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
